Fixing img paths in nbs

--- a/notebooks/micro_demag_signature_Ngrains.ipynb
+++ b/notebooks/micro_demag_signature_Ngrains.ipynb
@@ -154,7 +154,7 @@
     "tags": []
    },
    "source": [
-    "<img src=\"./figures/grain_OPX042_tetra.png\" width=400>"
+    "<img src=\"figures/grain_OPX042_tetra.png\" width=400>"
    ]
   },
   {
@@ -208,7 +208,7 @@
    "id": "11e9be08-dbee-40c5-8d49-73e75bee0086",
    "metadata": {},
    "source": [
-    "<img src=\"./figures/grain_OPX042_full.png\" width=400>"
+    "<img src=\"figures/grain_OPX042_full.png\" width=400>"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "id": "9e79287c-ce35-44f5-b088-3afc6de79013",
    "metadata": {},
    "source": [
-    "<img src=\"./figures/grain_OPX042_vortex.png\" width=400>"
+    "<img src=\"figures/grain_OPX042_vortex.png\" width=400>"
    ]
   },
   {
@@ -318,7 +318,7 @@
     "\n",
     "In this section we compute the grain signal using the `mmt_micromagnetic_demag_signature` library. The signal will be calculated at a scan surface of `3 µm x 3 µm`, at a height of `z = 1000 nm`. The grain was modelled using finite elements and the MERRILL software. The magnetic moment positions, orientations and volumes are specified in a `vbox` file. Using this information, the grain will be centered at the origin and the highest mesh point will be located at `z = 106.3 nm`. The magnetic state from the `vbox` file is a single vortex and was obtained after energy minimization using MERRILL.\n",
     "\n",
-    "<img src=\"./figures/grain_OPX042_vortex.png\" width=400> <img src=\"./figures/grain_OPX042_tetra.png\" width=400>"
+    "<img src=\"figures/grain_OPX042_vortex.png\" width=400> <img src=\"figures/grain_OPX042_tetra.png\" width=400>"
    ]
   },
   {
