--- a/notebooks/two_dipoles_sep.ipynb
+++ b/notebooks/two_dipoles_sep.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "In this notebook we test the inversion of the magnetic signal of two dipole sources with volumes equivalent to cuboid particles. The magnetic sources are aligned vertically. The source at the top has a larger volume. The magnetic signal is defined at the sensors of a scanning surface with specific dimensions. A diagram of the system looks like:\n",
     "\n",
-    "<img src=\"./figures/two_dip_diagram.png\" width=300>\n",
+    "<img src=\"figures/two_dip_diagram.png\" width=300>\n",
     "\n",
     "In this problem the magnetic signal of the large-volume dipole source obscures the magnetic signal of the source at the bottom, and leads to an ill-conditioned forward matrix. We will study how the error in the magnetization solution grows as the bottom dipole source is moved farther away from the other source."
    ]
