Removing warnings in nbs

--- a/notebooks/micro_demag_signature_Ngrains.ipynb
+++ b/notebooks/micro_demag_signature_Ngrains.ipynb
@@ -99,17 +99,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/david/mambaforge/lib/python3.10/site-packages/pyvista/plotting/plotting.py:6510: UserWarning: Not within a jupyter notebook environment.\n",
-      "Ignoring ``jupyter_backend``.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = pv.Plotter(off_screen=True, notebook=False, window_size=[1000, 800])\n",
     "p.set_background('white')\n",
@@ -142,15 +132,13 @@
     "p.add_light(light)\n",
     "# p.enable_shadows()\n",
     "\n",
-    "p.show(jupyter_backend='static', \n",
-    "       screenshot='./figures/grain_OPX042_tetra.png'\n",
-    "       )\n",
-    "# p.show()"
+    "p.show(screenshot='./figures/grain_OPX042_tetra.png')\n",
+    "# p.show(jupyter_backend='static')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "bdd3b5ed-2f40-4caf-864e-3be8bf09f76c",
    "metadata": {
     "tags": []
@@ -163,7 +151,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {
       "image/png": {
        "width": 400
@@ -178,22 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c90b8745",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/david/mambaforge/lib/python3.10/site-packages/pyvista/plotting/plotting.py:6510: UserWarning: Not within a jupyter notebook environment.\n",
-      "Ignoring ``jupyter_backend``.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = pv.Plotter(off_screen=True, notebook=False, window_size=[1000, 800])\n",
     "p.set_background('white')\n",
@@ -218,13 +196,13 @@
     "# p.enable_shadows()\n",
     "\n",
     "# p.save_graphic('grain_OPX042_full.png')\n",
-    "p.show(jupyter_backend='static', screenshot='./figures/grain_OPX042_full.png')\n",
-    "# p.show()"
+    "p.show(screenshot='./figures/grain_OPX042_full.png')\n",
+    "# p.show(jupyter_backend='static')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "11a94b8f-dc82-41ae-a591-dc01aa4c1844",
    "metadata": {
     "tags": []
@@ -237,7 +215,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {
       "image/png": {
        "width": 400
@@ -252,22 +230,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "3022a5c7",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/david/mambaforge/lib/python3.10/site-packages/pyvista/plotting/plotting.py:6510: UserWarning: Not within a jupyter notebook environment.\n",
-      "Ignoring ``jupyter_backend``.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mesh.point_data.update(dict(M_vec=np.column_stack((mesh.get_array('Mx'),\n",
     "                                                   mesh.get_array('My'),\n",
@@ -315,14 +283,12 @@
     "p.camera.elevation = -15\n",
     "\n",
     "p.save_graphic('grain_OPX042_vortex.svg')\n",
-    "p.show(jupyter_backend='static',\n",
-    "       screenshot='./figures/grain_OPX042_vortex.png'\n",
-    "       )"
+    "p.show(screenshot='./figures/grain_OPX042_vortex.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "eae79936-0a12-4d39-95ba-3eec2082c430",
    "metadata": {
     "tags": []
@@ -335,7 +301,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {
       "image/png": {
        "width": 400
@@ -350,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "6141f44a",
    "metadata": {
     "tags": []
@@ -380,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "c1a0bb87",
    "metadata": {
     "tags": []
@@ -394,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "5943ac2a",
    "metadata": {
     "tags": []
@@ -438,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "266d4bc7",
    "metadata": {
     "tags": []
@@ -472,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "901fec70",
    "metadata": {
     "tags": []
@@ -492,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "e62a55bd",
    "metadata": {
     "tags": []
@@ -515,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "2d36f404",
    "metadata": {
     "tags": []
@@ -533,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "dca3ea9f",
    "metadata": {
     "tags": []
@@ -545,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "8553e66d",
    "metadata": {
     "tags": []
@@ -573,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "65b00dc0",
    "metadata": {
     "tags": []
@@ -593,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "39cb5033",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -656,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "854a809b",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -757,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "b9891d2a-9114-41e2-b9dc-1d104bc263ee",
    "metadata": {
     "tags": []
@@ -778,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "7def82cd-def7-44d3-b81b-94e0ddcb20b1",
    "metadata": {
     "tags": []
@@ -791,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "b71b9953-4b23-459f-ac1a-66060fd3911e",
    "metadata": {},
    "outputs": [],
@@ -803,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "1612cd2c-4cbc-4eb0-8cf4-6bdaca475a5d",
    "metadata": {
     "tags": []
@@ -822,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "ce5594f9-e3f3-4a04-b62b-bef36cfa9635",
    "metadata": {
     "tags": []
@@ -860,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "83145944-6c2e-43cd-b87f-6cd6d5334ed6",
    "metadata": {
     "tags": []
@@ -884,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "ea6930fb-9ca0-439d-baaa-01d596952959",
    "metadata": {
     "tags": []
@@ -924,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "86f94128-5d49-465c-84f2-9346b97df9e6",
    "metadata": {
     "tags": []
@@ -943,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "9447f1f0-a61c-4e57-bdac-60ff1a3dc88d",
    "metadata": {
     "tags": []
