Added references to notebooks

--- a/notebooks/synthetic_sample_Area1.ipynb
+++ b/notebooks/synthetic_sample_Area1.ipynb
@@ -22,7 +22,15 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('adornmyplot.mplstyle')\n",
-    "import matplotlib as mpl"
+    "import matplotlib as mpl\n",
+    "\n",
+    "import pyvista as pv\n",
+    "\n",
+    "import mmt_dipole_cuboid_inversion as dci\n",
+    "import mmt_dipole_cuboid_inversion.tools as dcit\n",
+    "\n",
+    "import mmt_multipole_inversion as minv\n",
+    "import json"
    ]
   },
   {
@@ -38,7 +46,11 @@
    "id": "fd98ea75",
    "metadata": {},
    "source": [
-    "Here we download the data of (de Groot et al., 2018) from the public repository PANGAEA. The updated version of the data contains three areas that are pre-processed and where tomography and magnetometry coordinates are co-registered. We unzip the data and extract the contents:"
+    "We start downloading the data of de Groot et al. (2018)\\* from the public repository PANGAEA. The updated version of the data contains three areas that are pre-processed and where tomography and magnetometry coordinates are co-registered. We unzip the data and extract the contents.\n",
+    "\n",
+    "*de Groot, L.V., Fabian, K., Béguin, A., Reith, P., Barnhoorn, A., Hilgenkamp, H., 2018. List of grains and results of the Scanning SQUID Magnetometer (SSM) scan. URL: https://doi.org/10.1594/PANGAEA.886724*\n",
+    "\n",
+    "*de Groot, L.V., Fabian, K., Béguin, A., Reith, P., Barnhoorn, A., Hilgenkamp, H., 2018. Determining Individual Particle Magnetizations in Assemblages of Micrograins. Geophysical Research Letters 45, 2995–3000. URL: https://agupubs.onlinelibrary.wiley.com/doi/478*"
    ]
   },
   {
@@ -143,16 +155,6 @@
     "# Visualize grains\n",
     "\n",
     "In this section we make a visualization of the tomographic data. Tomography voxels are already aggregated into the largest possible cuboids using the `cuboid_aggregation` algorithm included in the `mmt_dipole_cuboid_inversion` library. The visualization is done using the PyVista library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "775c9b3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyvista as pv"
    ]
   },
   {
@@ -272,17 +274,6 @@
    "metadata": {},
    "source": [
     "In this section we apply the homogeneously magnetized particle model to do the inversions. This means cuboids are asumed uniformly magnetized and we obtain dipole order solutions from the inversions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "4be99739",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import mmt_dipole_cuboid_inversion as dci\n",
-    "import mmt_dipole_cuboid_inversion.tools as dcit"
    ]
   },
   {
@@ -577,26 +568,7 @@
    "id": "324c87de",
    "metadata": {},
    "source": [
-    "In this section we apply the multipole expansion model for the inversions, thus we use the `mmt_multipole_inversion library`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "30070f2f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import mmt_multipole_inversion as minv\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3f71f9c0",
-   "metadata": {},
-   "source": [
-    "Start by computing the particle centers from the tomography/cuboids data:"
+    "In this section we apply the multipole expansion model for the inversions, thus we use the `mmt_multipole_inversion library`. Start by computing the particle centers from the tomography/cuboids data:"
    ]
   },
   {
