--- a/notebooks/synthetic_sample_Area2.ipynb
+++ b/notebooks/synthetic_sample_Area2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "90c7238e",
    "metadata": {
     "tags": []
@@ -22,7 +22,15 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('adornmyplot.mplstyle')\n",
-    "import matplotlib as mpl"
+    "import matplotlib as mpl\n",
+    "\n",
+    "import pyvista as pv\n",
+    "\n",
+    "import mmt_dipole_cuboid_inversion as dci\n",
+    "import mmt_dipole_cuboid_inversion.tools as dcit\n",
+    "\n",
+    "import mmt_multipole_inversion as minv\n",
+    "import json"
    ]
   },
   {
@@ -38,12 +46,16 @@
    "id": "6387aba1",
    "metadata": {},
    "source": [
-    "Here we download the data of (de Groot et al., 2018) from the public repository PANGAEA. The updated version of the data contains three areas that are pre-processed and where tomography and magnetometry coordinates are co-registered. We unzip the data and extract the contents:"
+    "We start downloading the data of de Groot et al. (2018)\\* from the public repository PANGAEA. The updated version of the data contains three areas that are pre-processed and where tomography and magnetometry coordinates are co-registered. We unzip the data and extract the contents.\n",
+    "\n",
+    "*de Groot, L.V., Fabian, K., Béguin, A., Reith, P., Barnhoorn, A., Hilgenkamp, H., 2018. List of grains and results of the Scanning SQUID Magnetometer (SSM) scan. URL: https://doi.org/10.1594/PANGAEA.886724*\n",
+    "\n",
+    "*de Groot, L.V., Fabian, K., Béguin, A., Reith, P., Barnhoorn, A., Hilgenkamp, H., 2018. Determining Individual Particle Magnetizations in Assemblages of Micrograins. Geophysical Research Letters 45, 2995–3000. URL: https://agupubs.onlinelibrary.wiley.com/doi/478*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "bcba0be7",
    "metadata": {
     "tags": []
@@ -79,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "7a1d455a",
    "metadata": {
     "tags": []
@@ -105,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "8f3ab414",
    "metadata": {
     "tags": []
@@ -144,19 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "603812bf",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import pyvista as pv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "8b405484",
    "metadata": {
     "tags": []
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "b827d704",
    "metadata": {
     "tags": []
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "573a9142",
    "metadata": {
     "tags": []
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "b2543fa6",
    "metadata": {
     "tags": []
@@ -283,20 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "614d9666",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import mmt_dipole_cuboid_inversion as dci\n",
-    "import mmt_dipole_cuboid_inversion.tools as dcit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "id": "ca74b39f",
    "metadata": {
     "tags": []
@@ -345,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "b4280d10",
    "metadata": {
     "tags": []
@@ -357,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "6d9c97b8",
    "metadata": {
     "tags": []
@@ -380,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "id": "7102f630",
    "metadata": {
     "tags": []
@@ -404,7 +391,7 @@
        "       [ 3.33188645e+03, -5.80285117e+03,  1.77393894e+03]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "id": "4b1d9e89",
    "metadata": {
     "tags": []
@@ -441,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "id": "8b5b0728",
    "metadata": {
     "tags": []
@@ -465,7 +452,7 @@
        "       [299.86362052,  14.84801613]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "id": "67cc4946",
    "metadata": {
     "tags": []
@@ -497,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "id": "069625e9",
    "metadata": {
     "tags": []
@@ -568,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "id": "fda1fef5",
    "metadata": {
     "tags": []
@@ -602,33 +589,12 @@
    "id": "46ec1791",
    "metadata": {},
    "source": [
-    "In this section we apply the multipole expansion model for the inversions, thus we use the `mmt_multipole_inversion library`"
+    "In this section we apply the multipole expansion model for the inversions, thus we use the `mmt_multipole_inversion library`. Start by computing the particle centers from the tomography/cuboids data:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "4f8e3202",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import mmt_multipole_inversion as minv\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ecbf4904",
-   "metadata": {},
-   "source": [
-    "Start by computing the particle centers from the tomography/cuboids data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "id": "25b9c62e",
    "metadata": {
     "tags": []
@@ -679,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "id": "6af2e540-4392-46ad-a0c6-b4edcd0addda",
    "metadata": {
     "tags": []
@@ -694,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "id": "b7b17a34",
    "metadata": {
     "tags": []
@@ -742,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "id": "7d63ff17",
    "metadata": {
     "tags": []
@@ -759,10 +725,10 @@
       "Setting Sensor origin y value to 0.0\n",
       "Scanning array size = 300 x 200\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 9.0913 s\n",
+      "Generation of Q matrix took: 0.6063 s\n",
       "Using scipy.linalg.pinv for inversion\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 1.4214 s\n",
+      "Generation of Q matrix took: 1.2630 s\n",
       "Using scipy.linalg.pinv for inversion\n"
      ]
     }
@@ -826,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "id": "17c32310",
    "metadata": {
     "tags": []
@@ -850,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "id": "16b57fba",
    "metadata": {
     "tags": []
@@ -877,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "id": "c7e577b4",
    "metadata": {
     "tags": []
@@ -907,7 +873,7 @@
        "        [270.61785888,  -8.47266816]])}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "id": "64bf78d5",
    "metadata": {
     "tags": []
@@ -946,13 +912,13 @@
       "Setting Sensor origin y value to 0.0\n",
       "Scanning array size = 300 x 200\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 4.7011 s\n",
+      "Generation of Q matrix took: 0.1098 s\n",
       "Using scipy.linalg.pinv for inversion\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 6.0031 s\n",
+      "Generation of Q matrix took: 0.3621 s\n",
       "Using scipy.linalg.pinv for inversion\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 10.4071 s\n",
+      "Generation of Q matrix took: 0.5902 s\n",
       "Using scipy.linalg.pinv for inversion\n"
      ]
     }
@@ -1025,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "id": "aa348953",
    "metadata": {
     "tags": []
@@ -1046,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "id": "f5016da8-5622-49d9-bb36-61cfde05f339",
    "metadata": {
     "tags": []
@@ -1058,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "id": "582604b6",
    "metadata": {
     "tags": []
@@ -1159,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "id": "c678c787",
    "metadata": {
     "tags": []
@@ -1205,14 +1171,6 @@
     "    \n",
     "print('\\n- Multipole Inversion using point sensors')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ff371ac-d3ff-4fdd-8377-b6845a126873",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
