Updated rtol tolerances for the inversions

--- a/notebooks/micro_demag_signature_Ngrains.ipynb
+++ b/notebooks/micro_demag_signature_Ngrains.ipynb
@@ -623,18 +623,7 @@
     "    A = (A - A.min()) / (A.max() - A.min())\n",
     "    I = np.zeros((A.shape[0], A.shape[1], 4))\n",
     "    I[:, :, 3] = (1 - A) * alpha\n",
-    "    return I\n",
-    "\n",
-    "# # Contours to do the labeling\n",
-    "# fig = plt.figure(figsize=(5, 5))\n",
-    "# ax = fig.add_axes([0, 0, 1, 1], frameon=True)\n",
-    "# cfLab = ax.contour(Z, vmin=-vlim, vmax=vlim, levels=levels, origin=\"lower\",\n",
-    "#                    cmap=cmap, extent=[-1.5, 1.5, -1.5, 1.5], zorder=zorder)\n",
-    "# cLab = ax.clabel(cfLab, cfLab.levels[:-1], inline=1, colors='k', zorder=100, fmt=\"%.1f\")\n",
-    "# cTexts = [c for c in cLab]\n",
-    "# del fig\n",
-    "# # del cLab\n",
-    "# del cfLab"
+    "    return I"
    ]
   },
   {
@@ -683,9 +672,6 @@
     "        extent=extents,\n",
     "        zorder=zorder,\n",
     "    )\n",
-    "    # ax.text(0.5, 0.5, 'AAAAAA', zorder=zorder)\n",
-    "    # conts.append(cf)\n",
-    "    # ax.clabel(cf, [l0], inline=0, colors='k', zorder=100, fmt=\"%.1f\")\n",
     "    zorder += 1\n",
     "    \n",
     "# for c in cTexts:\n",
@@ -862,7 +848,7 @@
     "# Load the scan signal data from the NPY file\n",
     "grain_inv.Bz_array = np.load(f'./Ngrains_mds/scan_signal_rnd2_scan-height_1000nm.npy')\n",
     "\n",
-    "grain_inv.compute_inversion(method='sp_pinv', rcond=1e-25)"
+    "grain_inv.compute_inversion(method='sp_pinv', rtol=1e-20)"
    ]
   },
   {
