--- a/notebooks/synthetic_sample_Area2.ipynb
+++ b/notebooks/synthetic_sample_Area2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "90c7238e",
    "metadata": {
     "tags": []
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "bcba0be7",
    "metadata": {
     "tags": []
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "7a1d455a",
    "metadata": {
     "tags": []
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "8f3ab414",
    "metadata": {
     "tags": []
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "8b405484",
    "metadata": {
     "tags": []
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "b827d704",
    "metadata": {
     "tags": []
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "573a9142",
    "metadata": {
     "tags": []
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "b2543fa6",
    "metadata": {
     "tags": []
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "ca74b39f",
    "metadata": {
     "tags": []
@@ -293,8 +293,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Domain limit 0 has been reset from 0.00035 to 0.000299.\n",
-      "Domain limit 1 has been reset from 0.00019999999999999998 to 0.00019899999999999999.\n",
       "Start inversion with 60000 knowns and 18 unknowns\n",
       "Inversion has been carried out\n"
      ]
@@ -310,7 +308,7 @@
     "cub_data = np.loadtxt(CuboidFile, skiprows=1)\n",
     "cub_data[:, 2] *= -1\n",
     "\n",
-    "SQUID_sensor_domain = np.array([[0, 0], [350, 200]]) * 1e-6\n",
+    "SQUID_sensor_domain = np.array([[0, 0], [299, 199]]) * 1e-6\n",
     "SQUID_spacing = 1e-6\n",
     "SQUID_deltax = 0.5e-6\n",
     "SQUID_deltay = 0.5e-6\n",
@@ -327,12 +325,12 @@
     "mag_inv.prepare_matrix(method='cython')\n",
     "\n",
     "# And we do the inversion:\n",
-    "mag_inv.calculate_inverse(method='scipy_pinv', rtol=1e-30)"
+    "mag_inv.calculate_inverse(method='scipy_pinv', rtol=1e-20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "b4280d10",
    "metadata": {
     "tags": []
@@ -344,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "6d9c97b8",
    "metadata": {
     "tags": []
@@ -367,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "7102f630",
    "metadata": {
     "tags": []
@@ -391,7 +389,7 @@
        "       [ 3.33188645e+03, -5.80285117e+03,  1.77393894e+03]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "4b1d9e89",
    "metadata": {
     "tags": []
@@ -428,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "8b5b0728",
    "metadata": {
     "tags": []
@@ -452,7 +450,7 @@
        "       [299.86362052,  14.84801613]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "67cc4946",
    "metadata": {
     "tags": []
@@ -484,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "069625e9",
    "metadata": {
     "tags": []
@@ -555,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "fda1fef5",
    "metadata": {
     "tags": []
@@ -594,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "id": "25b9c62e",
    "metadata": {
     "tags": []
@@ -645,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "id": "6af2e540-4392-46ad-a0c6-b4edcd0addda",
    "metadata": {
     "tags": []
@@ -660,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "id": "b7b17a34",
    "metadata": {
     "tags": []
@@ -708,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "id": "7d63ff17",
    "metadata": {
     "tags": []
@@ -725,10 +723,10 @@
       "Setting Sensor origin y value to 0.0\n",
       "Scanning array size = 300 x 200\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 0.6063 s\n",
+      "Generation of Q matrix took: 6.9686 s\n",
       "Using scipy.linalg.pinv for inversion\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 1.2630 s\n",
+      "Generation of Q matrix took: 2.0779 s\n",
       "Using scipy.linalg.pinv for inversion\n"
      ]
     }
@@ -755,7 +753,7 @@
     "for exp_limit in ['dipole', 'quadrupole']:\n",
     "# for exp_limit in ['dipole']:\n",
     "    inv_area2_ums.expansion_limit = exp_limit\n",
-    "    inv_area2_ums.compute_inversion(method='sp_pinv', rtol=1e-30)\n",
+    "    inv_area2_ums.compute_inversion(method='sp_pinv', rtol=1e-20)\n",
     "    # inv_area2_ums.compute_inversion(rcond=1e-30, method='np_pinv')\n",
     "    \n",
     "    # print(inv_area2_ums.inv_multipole_moments[:, :3] / inv_area2_ums.volumes[:, None])\n",
@@ -792,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "id": "17c32310",
    "metadata": {
     "tags": []
@@ -816,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "id": "16b57fba",
    "metadata": {
     "tags": []
@@ -843,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "id": "c7e577b4",
    "metadata": {
     "tags": []
@@ -873,7 +871,7 @@
        "        [270.61785888,  -8.47266816]])}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "id": "64bf78d5",
    "metadata": {
     "tags": []
@@ -912,13 +910,13 @@
       "Setting Sensor origin y value to 0.0\n",
       "Scanning array size = 300 x 200\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 0.1098 s\n",
+      "Generation of Q matrix took: 3.5454 s\n",
       "Using scipy.linalg.pinv for inversion\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 0.3621 s\n",
+      "Generation of Q matrix took: 3.8981 s\n",
       "Using scipy.linalg.pinv for inversion\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 0.5902 s\n",
+      "Generation of Q matrix took: 8.2704 s\n",
       "Using scipy.linalg.pinv for inversion\n"
      ]
     }
@@ -943,7 +941,7 @@
     "for exp_limit in ['dipole', 'quadrupole', 'octupole']:\n",
     "# for exp_limit in ['dipole']:\n",
     "    inv_area2_ums.expansion_limit = exp_limit\n",
-    "    inv_area2_ums.compute_inversion(method='sp_pinv', rtol=1e-30)\n",
+    "    inv_area2_ums.compute_inversion(method='sp_pinv', rtol=1e-20)\n",
     "    # inv_area2_ums.compute_inversion(rcond=1e-30, method='np_pinv')\n",
     "    \n",
     "    # print(inv_area2_ums.inv_multipole_moments[:, :3] / inv_area2_ums.volumes[:, None])\n",
@@ -974,6 +972,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "38f3a15b-40f8-44b5-9b07-7f3db5f56f3d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multipole inversion code - Magnetizations:\n",
+      "{'dipole': array([  239.75798394,  6949.52805036, 17948.48271282,  3630.84107582,\n",
+      "        9111.73923417,  6760.28278858]), 'quadrupole': array([ 1646.45594545, 15596.56655922, 23319.56804448,  6588.18822547,\n",
+      "        6066.59944533, 16428.78798886]), 'octupole': array([ 1633.41511274, 28901.0044739 , 27999.53069012, 20524.98320693,\n",
+      "        9044.07324205, 77181.33899075])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Multipole inversion code - Magnetizations:')\n",
+    "print(mag_minv_ps)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4b8348af",
    "metadata": {},
@@ -991,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "id": "aa348953",
    "metadata": {
     "tags": []
@@ -1012,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "id": "f5016da8-5622-49d9-bb36-61cfde05f339",
    "metadata": {
     "tags": []
@@ -1024,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "id": "582604b6",
    "metadata": {
     "tags": []
@@ -1125,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "id": "c678c787",
    "metadata": {
     "tags": []
