--- a/notebooks/synthetic_sample_Area1.ipynb
+++ b/notebooks/synthetic_sample_Area1.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6da96a09",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fa3bf63d",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f29de221",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "09c5e12a",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "23d42f04",
    "metadata": {},
    "outputs": [
@@ -317,13 +317,18 @@
     "# We then compute the forward (Green's) matrix that we use to invert the scan field:\n",
     "mag_inv.prepare_matrix(method='cython')\n",
     "\n",
-    "# And we do the inversion:\n",
-    "mag_inv.calculate_inverse(method='scipy_pinv', rtol=1e-30)"
+    "# And we do the inversion::::\n",
+    "# Notice that rtol is defined in Scipy with a default value of : max(M, N) * eps, \n",
+    "# where eps is the machine precision value of the datatype of the Forward G matrix (here float64),\n",
+    "# and M,N are the dimensions of the matrix.\n",
+    "# eps is around 2.22e-16; however the smallest number that can be represented in Numpy is \n",
+    "# substantially smaller, in the order of e-308; See: numpy.finfo\n",
+    "mag_inv.calculate_inverse(method='scipy_pinv', rtol=1e-20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "aa1e83b5",
    "metadata": {},
    "outputs": [],
@@ -333,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "289c0235",
    "metadata": {},
    "outputs": [
@@ -354,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f5522a25",
    "metadata": {},
    "outputs": [
@@ -378,7 +383,7 @@
        "       [ -4592.66677199,  -1717.13844967,  -5583.08682364]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "f07840bb",
    "metadata": {},
    "outputs": [],
@@ -413,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "188038f3",
    "metadata": {},
    "outputs": [
@@ -437,7 +442,7 @@
        "       [200.50011718, -48.70975427]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "655d9c9a",
    "metadata": {},
    "outputs": [],
@@ -467,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "99396609",
    "metadata": {},
    "outputs": [
@@ -536,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "b9569a8d",
    "metadata": {},
    "outputs": [
@@ -573,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "88bcd3e2",
    "metadata": {},
    "outputs": [],
@@ -622,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "93895339",
    "metadata": {},
    "outputs": [],
@@ -668,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "801ee5ef",
    "metadata": {},
    "outputs": [
@@ -683,10 +688,10 @@
       "Setting Sensor origin y value to 0.0\n",
       "Scanning array size = 351 x 201\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 8.8839 s\n",
+      "Generation of Q matrix took: 6.9469 s\n",
       "Using scipy.linalg.pinv for inversion\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 1.9622 s\n",
+      "Generation of Q matrix took: 1.4067 s\n",
       "Using scipy.linalg.pinv for inversion\n"
      ]
     }
@@ -713,7 +718,7 @@
     "for exp_limit in ['dipole', 'quadrupole']:\n",
     "# for exp_limit in ['dipole']:\n",
     "    inv_area1_ums.expansion_limit = exp_limit\n",
-    "    inv_area1_ums.compute_inversion(method='sp_pinv', rtol=1e-30)\n",
+    "    inv_area1_ums.compute_inversion(method='sp_pinv', rtol=1e-20)\n",
     "    # inv_area1_ums.compute_inversion(rcond=1e-30, method='np_pinv')\n",
     "    \n",
     "    # print(inv_area1_ums.inv_multipole_moments[:, :3] / inv_area1_ums.volumes[:, None])\n",
@@ -750,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "2ee15b13",
    "metadata": {},
    "outputs": [
@@ -772,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "a8a48d69",
    "metadata": {},
    "outputs": [
@@ -799,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "2fea7006",
    "metadata": {},
    "outputs": [
@@ -831,7 +836,7 @@
        "        [181.7998556 , -31.03943834]])}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "6fbe80cc",
    "metadata": {},
    "outputs": [
@@ -868,13 +873,13 @@
       "Setting Sensor origin y value to 0.0\n",
       "Scanning array size = 351 x 201\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 4.8735 s\n",
+      "Generation of Q matrix took: 3.1395 s\n",
       "Using scipy.linalg.pinv for inversion\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 5.3865 s\n",
+      "Generation of Q matrix took: 3.4391 s\n",
       "Using scipy.linalg.pinv for inversion\n",
       "Generating forward matrix\n",
-      "Generation of Q matrix took: 10.3384 s\n",
+      "Generation of Q matrix took: 6.7451 s\n",
       "Using scipy.linalg.pinv for inversion\n"
      ]
     }
@@ -899,7 +904,7 @@
     "for exp_limit in ['dipole', 'quadrupole', 'octupole']:\n",
     "# for exp_limit in ['dipole']:\n",
     "    inv_area1_ums.expansion_limit = exp_limit\n",
-    "    inv_area1_ums.compute_inversion(method='sp_pinv', rtol=1e-30)\n",
+    "    inv_area1_ums.compute_inversion(method='sp_pinv', rtol=1e-20)\n",
     "    # inv_area1_ums.compute_inversion(rcond=1e-30, method='np_pinv')\n",
     "    \n",
     "    # print(inv_area1_ums.inv_multipole_moments[:, :3] / inv_area1_ums.volumes[:, None])\n",
@@ -947,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "f98fdf87",
    "metadata": {},
    "outputs": [],
@@ -966,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "d847e1dd",
    "metadata": {},
    "outputs": [
@@ -1069,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "d302c051",
    "metadata": {
     "tags": []
