--- a/notebooks/two_dipoles_sep.ipynb
+++ b/notebooks/two_dipoles_sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3ecea97d",
    "metadata": {
     "tags": []
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6be982ab",
    "metadata": {
     "tags": []
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "1a49a03d",
    "metadata": {
     "tags": []
@@ -170,7 +170,7 @@
     "    dip_inversion.read_files(scanfile, cuboidfile, cuboid_scaling_factor=1e-6)\n",
     "    dip_inversion.set_scan_domain(gen_sd_mesh_from='sensor_center_domain')\n",
     "    dip_inversion.prepare_matrix(method='cython')\n",
-    "    dip_inversion.calculate_inverse(method='scipy_pinv', rcond=1e-30)\n",
+    "    dip_inversion.calculate_inverse(method='scipy_pinv', rcond=None)  # Use default rcond\n",
     "\n",
     "    # Check relative error is less than 1% = 0.01\n",
     "    # assert abs(dip_inversion.Mag[1] - Ms) / Ms < 1e-2\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "c721976a",
    "metadata": {
     "tags": []
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "f3c6b70c",
    "metadata": {
     "tags": []
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "c4f697cc",
    "metadata": {
     "tags": []
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "85485048",
    "metadata": {
     "tags": []
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "009e0f13",
    "metadata": {
     "tags": []
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "61477f7e",
    "metadata": {
     "tags": []
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "aaf7821c",
    "metadata": {
     "tags": []
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "30b4467b",
    "metadata": {
     "tags": []
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "85624819",
    "metadata": {
     "tags": []
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "f4578257",
    "metadata": {
     "tags": []
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "92980450",
    "metadata": {
     "tags": []
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "0fd8d13a",
    "metadata": {
     "tags": []
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "e183c207-d407-47bb-8e28-e13336ff9062",
    "metadata": {
     "tags": []
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "054b2bfc",
    "metadata": {
     "tags": []
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "967124c8-2a3c-478c-b332-96c427508770",
    "metadata": {
     "tags": []
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "c6b48a48",
    "metadata": {
     "tags": []
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "d22720fe",
    "metadata": {
     "tags": []
